--- a/index.html
+++ b/index.html
@@ -23,17 +23,17 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="card">
+    <div class="[ card ] [ bg-neutral-100 text-align-center ] ">
       <!-- BEM terminology -->
-      <img src="./images/illustration-hero.svg" alt="illustration-hero
+      <img src="./images/illustration-hero.svg" alt="illustration-hero"
       class="card__image" />
-      <div class="card__content">
+      <div class="[ card__content grid-flow ] [ padding-48 ]">
         <h2>Order Summary</h2>
         <p>
           You can now listen to millions of songs, audiobooks, and podcasts on
           any device anywhere you like!
         </p>
-        <div class="">
+        <div class="[ bg-neutral-200 text-align-left ]">
           <div>
             <img src="./images/icon-music.svg" alt="" />
             <!-- decoration element alt empty -->
@@ -44,9 +44,9 @@
           </div>
           <button>Change</button>
         </div>
+        <button>Proceed to Payment</button>
+        <button>Cancel Order</button>
       </div>
-      <button>Proceed to Payment</button>
-      <button>Cancel Order</button>
     </div>
   </body>
 </html>
